# oism-notebook

./: .gitignore  Pipfile  README.md  items.csv  justfile  oism-data.db  oism-note.ipynb  order_items.csv  pyproject.toml  setup-db.sh
outputs/: customer_rank.csv
src/oism_note/: __init__.py
